# rsedi

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  product_specification.md
.beads/: .gitignore  issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/edi-adapter-csv/: Cargo.toml
crates/edi-adapter-csv/src/: config.rs  errors.rs  lib.rs  reader.rs  schema.rs  writer.rs
crates/edi-adapter-db/: Cargo.toml
crates/edi-adapter-db/src/: connection.rs  lib.rs  reader.rs  schema.rs  sql.rs  writer.rs
crates/edi-adapter-db/tests/: error_handling_test.rs  integration_test.rs  transaction_test.rs
crates/edi-adapter-edifact/: Cargo.toml
crates/edi-adapter-edifact/src/: envelopes.rs  lib.rs  parser.rs  serializer.rs  syntax.rs
crates/edi-adapter-edifact/tests/: invrpt_large_fixture_test.rs
crates/edi-cli/: Cargo.toml
crates/edi-cli/src/: main.rs
crates/edi-cli/tests/: batch_command_test.rs  config_profiles_test.rs  generate_command_test.rs  mapping_diagnostics_command_test.rs  parse_command_test.rs  readme_examples_test.rs  recipes_command_test.rs  schema_command_test.rs  transform_command_test.rs  validate_command_test.rs
crates/edi-ir/: Cargo.toml
crates/edi-ir/src/: document.rs  lib.rs  metadata.rs  node.rs  traversal.rs
crates/edi-mapping/: Cargo.toml
crates/edi-mapping/src/: diagnostics.rs  dsl.rs  extensions.rs  lib.rs  numeric.rs  runtime.rs  transforms.rs
crates/edi-mapping/tests/: advanced_aggregations_test.rs  conditional_mapping_test.rs  extension_integration_test.rs  mapping_examples_test.rs  orders_to_csv_test.rs  slsrpt_to_csv_test.rs
crates/edi-mapping/tests/data/: conditional_map.yaml  orders_map.yaml  simple_map.yaml
crates/edi-pipeline/: Cargo.toml
crates/edi-pipeline/src/: batch.rs  lib.rs  numeric.rs  pipeline.rs  policies.rs  quarantine.rs  streaming.rs
crates/edi-pipeline/tests/: end_to_end_test.rs  orders_integration_test.rs
crates/edi-schema/: Cargo.toml
crates/edi-schema/src/: inheritance.rs  lib.rs  loader.rs  model.rs  registry.rs
crates/edi-schema/tests/data/: eancom_d96a_orders.json  invalid_schema.json  minimal_schema.json  minimal_schema.yaml  partner_override.json
crates/edi-validation/: Cargo.toml
crates/edi-validation/src/: codelist.rs  engine.rs  lib.rs  reporter.rs  rules.rs
crates/edi-validation/tests/: desadv_integration_test.rs  invoic_integration_test.rs  ordrsp_integration_test.rs  slsrpt_integration_test.rs  validation_integration_test.rs
crates/edi-validation/tests/data/: README.md
docs/: session_handoff.md
docs/architecture/: partner_tooling_design.md  x12_adapter_strategy.md
docs/operations/: github-issues-migration.md
scripts/github-migration/: README.md  migrate-beads-to-github.sh  validate-beads-github-migration.sh
testdata/edi/: README.md  edge_empty_elements.edi  edge_special_chars.edi  invalid_desadv_d96a_missing_bgm.edi  invalid_invoic_d96a_missing_bgm.edi  invalid_invoic_d96a_missing_element.edi  invalid_orders_missing_bgm.edi  invalid_orders_unknown_segment.edi  invalid_ordrsp_d96a_missing_bgm.edi  invalid_slsrpt_d96a_line_without_qty.edi  invalid_slsrpt_d96a_missing_bgm.edi  orders_acme.edi  orders_valid.edi  orders_with_errors.edi  orders_with_warnings.edi  valid_desadv_d96a_full.edi  valid_desadv_d96a_minimal.edi  valid_invoic_d96a_full.edi  valid_invoic_d96a_minimal.edi  valid_invrpt_d96a_large.edi  valid_orders_d96a_full.edi  valid_orders_d96a_minimal.edi  valid_ordrsp_d96a_full.edi  valid_ordrsp_d96a_minimal.edi  valid_ordrsp_d96a_with_cnt.edi  valid_slsrpt_d96a_full.edi  valid_slsrpt_d96a_minimal.edi
testdata/mappings/: README.md  advanced_order_totals.yaml  csv_to_orders.yaml  desadv_to_csv.yaml  desadv_to_json.yaml  invoic_to_csv.yaml  invoic_to_db.yaml  invoic_to_json.yaml  orders_to_csv.yaml  orders_to_json.yaml  ordrsp_to_csv.yaml  ordrsp_to_json.yaml  slsrpt_to_csv.yaml  slsrpt_to_json.yaml
testdata/schemas/: csv_orders_target.yaml  eancom_desadv_d96a.yaml  eancom_invoic_d96a.yaml  eancom_orders_d96a.yaml  eancom_ordrsp_d96a.yaml  eancom_slsrpt_d96a.yaml  eanncom_d96a_orders.yaml  partner_acme_orders.yaml  partner_acme_orders_1.0.yaml  partner_invoic_strict_1.0.yaml
