[package]
name = "edi-adapter-csv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CSV adapter for reading and writing EDI data"

[dependencies]
edi-ir = { workspace = true }
edi-schema = { workspace = true }
csv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
anyhow = { workspace = true }
