[package]
name = "edi-ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Intermediate Representation structures and traversal APIs for EDI documents"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = { workspace = true }
