[package]
name = "edi-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Streaming orchestration, batching, and partial acceptance policies"

[dependencies]
edi-ir = { workspace = true }
edi-schema = { workspace = true }
edi-validation = { workspace = true }
edi-mapping = { workspace = true }
edi-adapter-edifact = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = "3"
edi-adapter-csv = { workspace = true }
