[package]
name = "edi-validation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Validation engine for structural rules and codelists"

[dependencies]
edi-ir = { workspace = true }
edi-schema = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
anyhow = { workspace = true }
